@@ -4,10 +4,10 @@ defined('BASEPATH') OR exit('No direct script access allowed');
 // the menu basics (text navbar)
 $config['menu_choices'] = array(
     'menudata' => array(
-        array('name' => 'Alpha', 'link' => '/able'),
-        array('name' => 'Bravo', 'link' => '#'),
+        array('name' => 'Alpha', 'link' => '/Able'),
+        array('name' => 'Bravo', 'link' => '/Bravo'),
         array('name' => 'Charlie', 'link' => '#'),
-        array('name' => 'Delta', 'link' => '/delta/force'),
+        array('name' => 'Delta', 'link' => '/Delta/Force'),
         array('name' => 'Echo', 'link' => '#'),
         array('name' => 'Foxtrot', 'link' => '#'),
         array('name' => 'Golf', 'link' => '#'),
